src/objects/Center_Information__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Texas North</fullName>
                </value>
                <value>
                    <fullName>Texas South</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>New Centers</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Open_Date__c</fullName>
        <description>Date the Center schedule is &apos;opened&apos; to begin scheduling Consults.</description>
        <label>Schedule Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Transfer_Note__c</fullName>
        <description>Displays on the top of the patient layout and provides info on how to handle transfers to Network Centers</description>
        <label>Scheduled Transfer Note</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sells_Other_Products_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this triggers a workflow process to create ClearChoice_Center_Part records (for this center) from every existing ClearChoice_Part record</description>
        <label>Sells Other Products &amp; Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Confirmation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether we try to send an email when someone schedules a consultation at this location. This is mainly intended to be used for network centers</description>
        <label>Send Confirmation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Gold_Lead_Text_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the system should send a text message to the doctor when a gold lead comes in.</description>
        <label>Send Gold Lead Text Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1_Floor__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used for new compensation program</description>
        <label>Tier 1 Floor</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_2_Floor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tier 2 Floor</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_3_Floor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quarter Target</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Time Zone the center is located in.  Used for some call center activity reporting that analyzes our effectivness in the different time zones.</description>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransUnion_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the center has completed the paperwork and can have patients run through TransUnion</description>
        <label>TransUnion Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransUnion_Identifier__c</fullName>
        <description>Just using this as a unique ID for the Transunion call.  CustomerBranch tag</description>
        <displayFormat>CI{0000}</displayFormat>
        <label>TransUnion Identifier</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                </value>
                <value>
                    <fullName>Mini</fullName>
                </value>
                <value>
                    <fullName>Satellite</fullName>
                </value>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Network Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Alternate_Calendar_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Alternate Calendar URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Alternate_Url__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Alternate Url</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_TUPIQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates if we should use the TUPIQ model to determine green/yellow for this center</description>
        <label>Use TUPIQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Windent_ID_for_Dexis_when_possible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Windent ID for Dexis when possible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vantage_OfficeID__c</fullName>
        <description>Used to store the ID for a Vantage office - Network Centers only</description>
        <externalId>true</externalId>
        <label>Vantage OfficeID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veneers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the center offers Veneers</description>
        <label>Veneers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Alert__c</fullName>
        <description>A warning message to display on the site when someone is selected a center</description>
        <label>Web Alert</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if a center should be visible on the web site</description>
        <label>Web Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whitening__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the center offers whitening</description>
        <label>Whitening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Windent_Clinic_ID__c</fullName>
        <description>Stores the value of the Windent Clinic ID instance that the patients for this center would be tied to</description>
        <label>Windent Clinic ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Windent_ID_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Windent ID Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Windent_UNC_Path__c</fullName>
        <label>Windent UNC Path</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iCAT_Flex_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>iCAT Flex Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>latlong__c</fullName>
        <description>Geo Coordinates of the Center</description>
        <label>GeoPosition</label>
        <required>true</required>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <label>Center Information</label>
    <listViews>
        <fullName>Analytics</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Active__c</columns>
        <columns>Baseline_Target__c</columns>
        <columns>Baseline_Target_CPC__c</columns>
        <columns>Quarterly_CPC_Target__c</columns>
        <columns>Center_Close_Date__c</columns>
        <columns>Center_Open_Date__c</columns>
        <columns>DMA__c</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Web_Visible__c</columns>
        <columns>Launch_Hand_off_Date__c</columns>
        <columns>Finance_Label__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>Analytics</label>
        <sharedTo>
            <group>Data_Audit</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Andy_s_Center_View</fullName>
        <columns>NAME</columns>
        <columns>Map_Directions_URL__c</columns>
        <columns>Local_Front_Desk__c</columns>
        <columns>Call_Center_Marketing__c</columns>
        <columns>Center_Alerts__c</columns>
        <columns>Outbound_Phone_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Allow_Bulk_Printing__c</columns>
        <filterScope>Everything</filterScope>
        <label>deerfield</label>
    </listViews>
    <listViews>
        <fullName>Center_View_All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Local_Front_Desk__c</columns>
        <columns>Call_Center_Marketing__c</columns>
        <columns>Center_Alerts__c</columns>
        <columns>Type__c</columns>
        <columns>Performs_AO4__c</columns>
        <columns>Center_Close_Date__c</columns>
        <columns>Center_Open_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Center View All</label>
    </listViews>
    <nameField>
        <label>Center Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Center Information</pluralLabel>
    <recordTypes>
        <fullName>Center</fullName>
        <active>true</active>
        <description>Captures Center Information</description>
        <label>Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>Center_Information_without_Required_Fields</fullName>
        <active>true</active>
        <description>This was created so we could have centers that don&apos;t conform to the typical field requirement page layout.</description>
        <label>Center Information without Required Fields</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Cannot_disable_sells_other_checkbox</fullName>
        <active>true</active>
        <description>If Sells Other Products &amp; Services is true, it can&apos;t be turned off.</description>
        <errorConditionFormula>NOT(Sells_Other_Products_Services__c) &amp;&amp; PRIORVALUE(Sells_Other_Products_Services__c)</errorConditionFormula>
        <errorDisplayField>Sells_Other_Products_Services__c</errorDisplayField>
        <errorMessage>This can&apos;t be disabled once activated.</errorMessage>
    </validationRules>
</CustomObject>